moved server source to src, enabled prettier (#175)
* moved server source to src, enabled prettier

* jest prefers relative path

* eslint-plugin-prettier added

* build only src folder

* added a new build config

* check files

* check files

* add certs back

* show coverage

* fixed db-seed
